[project]
name = "repository45"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya",email = "ilyakolesnik2048@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
